--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "http-metrics-middleware",
-  "version": "1.0.0",
+  "version": "1.0.1-0",
   "description": "Express middleware for adding common prometheus metrics",
   "author": "QlikTech International AB",
   "license": "MIT",
