--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "eslint": "4.18.2",
     "eslint-config-airbnb-base": "12.1.0",
     "eslint-plugin-import": "2.9.0",
-    "eslint-plugin-mocha": "4.12.1"
+    "eslint-plugin-mocha": "4.12.1",
+    "sinon": "4.4.2"
   }
 }
