--- a/package.json
+++ b/package.json
@@ -35,12 +35,10 @@
   },
   "devDependencies": {
     "after-work.js": "4.1.0",
-    "chai": "4.1.2",
     "codeclimate-test-reporter": "0.5.0",
     "eslint": "4.18.2",
     "eslint-config-airbnb-base": "12.1.0",
     "eslint-plugin-import": "2.9.0",
-    "eslint-plugin-mocha": "4.12.1",
-    "sinon": "4.4.2"
+    "eslint-plugin-mocha": "4.12.1"
   }
 }
