--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "main": "index.js",
   "scripts": {
-    "test": "npm run lint && aw --coverage --nyc.babel false --glob test/index_test.js",
+    "test": "npm run lint && aw --babel.enable false --testExt '*_test.js' --nyc.sourceMap true --nyc.instrumenter './lib/instrumenters/istanbul' --coverage",
     "test:codeclimate": "npm test && cat coverage/lcov.info | codeclimate-test-reporter",
     "lint": "eslint .",
     "lint-fix": "eslint --fix ."
