--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "url-value-parser": "2.0.1"
   },
   "devDependencies": {
-    "@after-work.js/aw": "^6.0.0-dev.20190809.0",
+    "@after-work.js/aw": "^6.0.6",
     "codeclimate-test-reporter": "0.5.1",
     "eslint": "6.8.0",
     "eslint-config-airbnb-base": "14.0.0",
