--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "author": "QlikTech International AB",
   "license": "MIT",
   "main": "index.js",
+  "engines": {
+    "node": ">=10.0.0"
+  },
   "scripts": {
     "test": "npm run lint && aw --babel.enable false --testExt '*_test.js' --nyc.sourceMap true --nyc.instrumenter './lib/instrumenters/istanbul' --coverage",
-    "test:codeclimate": "npm test && cat coverage/lcov.info | codeclimate-test-reporter",
     "lint": "eslint .",
     "lint-fix": "eslint --fix ."
   },
@@ -36,7 +38,6 @@
   },
   "devDependencies": {
     "@after-work.js/aw": "6.0.11",
-    "codeclimate-test-reporter": "0.5.1",
     "eslint": "6.8.0",
     "eslint-config-airbnb-base": "14.0.0",
     "eslint-plugin-import": "2.20.1",
