--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   "homepage": "https://github.com/qlik-oss/http-metrics-middleware#readme",
   "dependencies": {
     "accepts": "1.3.8",
-    "express": "4.19.2",
+    "express": "^4.19.2",
     "lodash": "4.17.21",
     "on-finished": "2.4.1",
     "performance-now": "2.1.0",
@@ -38,7 +38,7 @@
   },
   "devDependencies": {
     "@after-work.js/aw": "7.0.0-alpha.1",
-    "eslint": "9.4.0",
+    "eslint": "8.57.0",
     "eslint-config-airbnb-base": "15.0.0",
     "eslint-plugin-import": "2.29.1",
     "eslint-plugin-mocha": "10.4.3"
