--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "node": ">=10.0.0"
   },
   "scripts": {
-    "test": "npm run lint && aw --babel.enable false --testExt '*_test.js' --nyc.sourceMap true --nyc.instrumenter './lib/instrumenters/istanbul' --coverage",
+    "test": "NODE_ENV=test mocha --exit -- ./test/**/*.js",
     "lint": "eslint .",
     "lint-fix": "eslint --fix ."
   },
@@ -37,9 +37,12 @@
     "url-value-parser": "2.2.0"
   },
   "devDependencies": {
+    "chai": "^4.4.1",
     "eslint": "8.57.0",
     "eslint-config-airbnb-base": "15.0.0",
     "eslint-plugin-import": "2.29.1",
-    "eslint-plugin-mocha": "10.4.3"
+    "eslint-plugin-mocha": "10.4.3",
+    "mocha": "^10.7.3",
+    "sinon": "^19.0.2"
   }
 }
